--- a/main.html
+++ b/main.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<style type="text/css"> 
-			body {margin: 30px;} 
-		</style>  
-		<meta charset=utf-8 /> 
-		<title>Remove items from a dropdown list</title>
-	</head>
+  <head>
+    <title>Remove Color</title>
+  </head>
+  <body>
+    <h3>Select and Remove a Color</h3>
 
-	<body>
-		<form> 
-			<select id="colorSelect"> 
-				<option>Red</option> 
-				<option>Green</option> 
-				<option>White</option> 
-				<option>Black</option> 
-			</select> 
-			<input type="button" value="Select and Remove"> 
-		</form>
+    <select id="colorSelect">
+      <option>Red</option>
+      <option>Green</option>
+      <option>White</option>
+      <option>Black</option>
+    </select>
 
-		<script type="text/javascript" src="./script.js">
-		</script>
-
-	</body>
-
+    <input type="button" value="Select and Remove" onclick="removeColor()">
+    
+    <script>
+      function removeColor() {
+        const select = document.getElementById("colorSelect");
+        select.remove(select.selectedIndex);
+      }
+    </script>
+  </body>
 </html>
